--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "Jeremy French",
   "license": "MIT",
+  "engines": {
+    "node": "8.17.x"
+  },
   "scripts": {
     "serve": "live-server public/",
     "build:dev": "webpack",
