--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expensify",
   "engines": {
-    "node": ">=50.9"
+    "node": "8.17.x"
   },
   "version": "1.0.0",
   "main": "index.js",
